--- a/css/index.scss
+++ b/css/index.scss
@@ -9,7 +9,7 @@ body, html {
   overflow: hidden;
   position: relative;
   text-align: center;
-  line-height: 600px;
+  padding-top: 250px;
   font-size: 100px;
   font-weight: bolder;
 }
